# raftor_storagehq

./: MANIFEST.in  README.md  example_common_site_config.json  example_site_config.json  modules.txt  pyproject.toml
raftor_storagehq/: api.py  backups.py  cli.py  hooks.py  install.py  migrate.py  settings.py
raftor_storagehq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
raftor_storagehq/config/: desktop.py
raftor_storagehq/overrides/: storage_client.py  storage_file.py
raftor_storagehq/public/js/: raftor_storagehq.bundle.js
raftor_storagehq/storage/: __init__.py  base.py  factory.py
raftor_storagehq/storage/providers/: fallback.py  local_disk.py  s3_compatible.py
raftor_storagehq/storagehq/: migration.py
raftor_storagehq/storagehq/doctype/storagehq_settings/: storagehq_settings.js  storagehq_settings.json  storagehq_settings.py
raftor_storagehq/tests/: test_backup_restore_scope.py  test_domain_hierarchy_backup_keys.py
scripts/: test_r2_connection.py
